--- a/package.json
+++ b/package.json
@@ -664,7 +664,7 @@
     "lint": "node ./node_modules/tslint/bin/tslint -p . --fix",
     "lint:nofix": "node ./node_modules/tslint/bin/tslint -p .",
     "docs": "node ./node_modules/typedoc/bin/typedoc --mode modules --excludeExternals --out build/docs/dev --readme none src/",
-    "vsce": "node ./node_modules/.bin/vsce"
+    "vsce": "node ./node_modules/vsce/out/vsce"
   },
   "devDependencies": {
     "@types/ajv": "^0.0.3",
